RESOLVED FIXED 254468
AX: VoiceOver not reading entered text in text fields.
https://bugs.webkit.org/show_bug.cgi?id=254468
Summary AX: VoiceOver not reading entered text in text fields.
Andres Gonzalez
Reported 2023-03-25 13:54:40 PDT
Attachments
Patch (17.72 KB, patch)
2023-03-25 14:00 PDT, Andres Gonzalez
no flags
Patch (17.90 KB, patch)
2023-03-26 09:26 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-03-25 13:54:49 PDT
Andres Gonzalez
Comment 2 2023-03-25 13:56:22 PDT
Radar WebKit Bug Importer
Comment 3 2023-03-25 13:56:30 PDT
Andres Gonzalez
Comment 4 2023-03-25 14:00:03 PDT
chris fleizach
Comment 5 2023-03-25 14:24:56 PDT
Comment on attachment 465591 [details] Patch Good nuance to remember that apparently these ax attributes strings need CGcolors instead of NSColors Thanks!
Andres Gonzalez
Comment 6 2023-03-26 09:26:08 PDT
Darin Adler
Comment 7 2023-03-26 09:31:06 PDT
> The cause of the problem was that we were setting the color attribute in the AttributedString using the NSColor pointer that is not retained after the caller of this function returns This explanation doesn’t make sense. Attributed strings retain the attributes, so the NSColor should be retained by the attributed string. There must be something else going on.
chris fleizach
Comment 8 2023-03-26 10:18:56 PDT
(In reply to Darin Adler from comment #7) > > The cause of the problem was that we were setting the color attribute in the AttributedString using the NSColor pointer that is not retained after the caller of this function returns > > This explanation doesn’t make sense. Attributed strings retain the > attributes, so the NSColor should be retained by the attributed string. > There must be something else going on. I talked to andres offline. This explanation isn't right. The problem was that AX system expects cgcolors instead of nscolors. Andres can you update the message
EWS
Comment 9 2023-03-26 10:24:25 PDT
Committed 262126@main (ae7bf78d3f4f): <https://commits.webkit.org/262126@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465596 [details].
Andres Gonzalez
Comment 10 2023-03-26 14:20:54 PDT
(In reply to Darin Adler from comment #7) > > The cause of the problem was that we were setting the color attribute in the AttributedString using the NSColor pointer that is not retained after the caller of this function returns > > This explanation doesn’t make sense. Attributed strings retain the > attributes, so the NSColor should be retained by the attributed string. > There must be something else going on. Corrected the code comment in https://bugs.webkit.org/show_bug.cgi?id=254486. Thanks for pointing out.
Note You need to log in before you can comment on or make changes to this bug.